Add some adjustments

--- a/app/views/courses/_form.html.erb
+++ b/app/views/courses/_form.html.erb
@@ -12,23 +12,23 @@
   <% end %>
 
   <div class="field">
-    <%= f.label :name %><br>
+    <%= f.label :name, "Nome" %><br>
     <%= f.text_field :name %>
   </div>
 
   <div class="field">
-    <%= f.label :first_unity %><br>
+    <%= f.label :first_unity, "Primeira Unidade" %><br>
     <%= f.text_field :first_unity %>
   </div>
   <div class="field">
-    <%= f.label :second_unity %><br>
+    <%= f.label :second_unity, "Segunda Unidade" %><br>
     <%= f.text_field :second_unity %>
   </div>
   <div class="field">
-    <%= f.label :third_unity %><br>
+    <%= f.label :third_unity, "Terceira Unidade" %><br>
     <%= f.text_field :third_unity %>
   </div>
   <div class="actions">
-    <%= f.submit %>
+    <%= f.submit "Salvar" %>
   </div>
 <% end %>
