--- a/app/views/courses/edit.html.erb
+++ b/app/views/courses/edit.html.erb
@@ -1,6 +1,6 @@
-<h1>Editing course</h1>
+<h1>Editar Disciplina</h1>
 
 <%= render 'form' %>
 
-<%= link_to 'Show', @course %> |
-<%= link_to 'Back', courses_path %>
+<%= link_to 'Visualizar', @course %> |
+<%= link_to 'Voltar', courses_path %>
